--- a/seq2seqLM.ipynb
+++ b/seq2seqLM.ipynb
@@ -98,16 +98,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "tokenizer = Tokenizer(BPE(unk_token=\"[UNK]\"))\n",
     "trainer = BpeTrainer(special_tokens=[\"[UNK]\", \"[CLS]\", \"[SEP]\", \"[PAD]\", \"[MASK]\"])\n",
-    "\n",
-    "\n",
     "\n",
     "obolo_data = train['Obolo']\n",
     "\n",
@@ -118,15 +114,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15852\n",
-      "30505\n"
+      "15866\n",
+      "30535\n"
      ]
     }
    ],
@@ -141,23 +137,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "jisọs oneninan̄a me agan̄ galili isi agba okwaan̄ jodan, inyi jọn igwook ọmọ mun̄.\n",
-      "['Ġjiso', 'Ì£', 's', 'Ġoneninan', 'ÌĦ', 'a', 'Ġme', 'Ġagan', 'ÌĦ', 'Ġgalili', 'Ġisi', 'Ġagba', 'Ġokwaan', 'ÌĦ', 'Ġjodan', ',', 'Ġinyi', 'Ġjo', 'Ì£', 'n', 'Ġigwook', 'Ġo', 'Ì£', 'mo', 'Ì£', 'Ġmun', 'ÌĦ.']\n",
-      "eyiyi ore adasi ikan, mè ire si eyi òmimin ichit.\n",
-      "['Ġeyiyi', 'Ġore', 'Ġadasi', 'Ġikan', ',', 'Ġme', 'ÌĢ', 'Ġire', 'Ġsi', 'Ġeyi', 'Ġo', 'ÌĢ', 'mimin', 'Ġichit', '.']\n",
-      "mije ema kpetet inyan̄a-ibot awaji onyan̄abe melek kiban̄ inye; kpesusun̄ si ikan kan̄.\n",
-      "['Ġmije', 'Ġema', 'Ġkpetet', 'Ġinyan', 'ÌĦ', 'a', '-', 'ibot', 'Ġawaji', 'Ġonyan', 'ÌĦ', 'abe', 'Ġmelek', 'Ġkiban', 'ÌĦ', 'Ġinye', ';', 'Ġkpesusun', 'ÌĦ', 'Ġsi', 'Ġikan', 'Ġkan', 'ÌĦ.']\n",
-      "ebilene mêlilim inin̄ emen ǹkororok lek ewuuk, mè emen udọn̄ me inyọn̄ ijọn̄, inyi ema enan̄a me lek ikpele ukpook okumugwem, mè òrirọ eyi umin ubọọn̄ kan̄, me mgbọ okumugwem môjibibe isibi inu inisisik linyọn̄.\n",
-      "['Ġebilene', 'Ġme', 'ÌĤ', 'lilim', 'Ġinin', 'ÌĦ', 'Ġemen', 'Ġn', 'ÌĢ', 'kororok', 'Ġlek', 'Ġewuuk', ',', 'Ġme', 'ÌĢ', 'Ġemen', 'Ġudo', 'Ì£', 'n', 'ÌĦ', 'Ġme', 'Ġinyo', 'Ì£', 'n', 'ÌĦ', 'Ġijo', 'Ì£', 'n', 'ÌĦ,', 'Ġinyi', 'Ġema', 'Ġenan', 'ÌĦ', 'a', 'Ġme', 'Ġlek', 'Ġikpele', 'Ġukpook', 'Ġokumugwem', ',', 'Ġme', 'ÌĢ', 'Ġo', 'ÌĢ', 'riro', 'Ì£', 'Ġeyi', 'Ġumin', 'Ġubo', 'Ì£', 'o', 'Ì£', 'n', 'ÌĦ', 'Ġkan', 'ÌĦ,', 'Ġme', 'Ġmgbo', 'Ì£', 'Ġokumugwem', 'Ġmo', 'ÌĤ', 'jibibe', 'Ġisibi', 'Ġinu', 'Ġinisisik', 'Ġlinyo', 'Ì£', 'n', 'ÌĦ.']\n",
-      "nomi otutumu inyi rufu nwa ogwu gwun̄ ibe, “gwun̄ n̄a, înwọn ibe owu òkogọọk ebi ikwaan̄ kan̄ ebibaan̄ òkosibi òsi uko kiban̄. mije, ire osi inin̄ uko ebi ofifi ife, owu môkọt iben unan.”\n",
-      "['Ġnomi', 'Ġotutumu', 'Ġinyi', 'Ġrufu', 'Ġnwa', 'Ġogwu', 'Ġgwun', 'ÌĦ', 'Ġibe', ',', 'ĠâĢľ', 'gwun', 'ÌĦ', 'Ġn', 'ÌĦ', 'a', ',', 'Ġi', 'ÌĤ', 'nwo', 'Ì£', 'n', 'Ġibe', 'Ġowu', 'Ġo', 'ÌĢ', 'kogo', 'Ì£', 'o', 'Ì£', 'k', 'Ġebi', 'Ġikwaan', 'ÌĦ', 'Ġkan', 'ÌĦ', 'Ġebibaan', 'ÌĦ', 'Ġo', 'ÌĢ', 'kosibi', 'Ġo', 'ÌĢ', 'si', 'Ġuko', 'Ġkiban', 'ÌĦ.', 'Ġmije', ',', 'Ġire', 'Ġosi', 'Ġinin', 'ÌĦ', 'Ġuko', 'Ġebi', 'Ġofifi', 'Ġife', ',', 'Ġowu', 'Ġmo', 'ÌĤ', 'ko', 'Ì£', 't', 'Ġiben', 'Ġunan', '.âĢĿ']\n"
+      "“ekene onene ifo emen inyọn̄, mè isibi inu? sà ìre ekene otitiin̄ efet itap me akajit ubọk kan̄ ichit? ekene okat mun̄ me emen ekwut ibọp? sà ìre ekene osun̄ ntutun̄ ere geelek me linyọn̄ me irek kan̄? keke ore erieen̄ kan̄? sà ìre keke ore erieen̄ gwun̄ kan̄? tumu nyi emi nu, mè ire oriọọn̄!\n",
+      "['ĠâĢľ', 'ekene', 'Ġonene', 'Ġifo', 'Ġemen', 'Ġinyo', 'Ì£', 'n', 'ÌĦ,', 'Ġme', 'ÌĢ', 'Ġisibi', 'Ġinu', '?', 'Ġsa', 'ÌĢ', 'Ġi', 'ÌĢ', 're', 'Ġekene', 'Ġotitiin', 'ÌĦ', 'Ġefet', 'Ġitap', 'Ġme', 'Ġakajit', 'Ġubo', 'Ì£', 'k', 'Ġkan', 'ÌĦ', 'Ġichit', '?', 'Ġekene', 'Ġokat', 'Ġmun', 'ÌĦ', 'Ġme', 'Ġemen', 'Ġekwut', 'Ġibo', 'Ì£', 'p', '?', 'Ġsa', 'ÌĢ', 'Ġi', 'ÌĢ', 're', 'Ġekene', 'Ġosun', 'ÌĦ', 'Ġntutun', 'ÌĦ', 'Ġere', 'Ġgeelek', 'Ġme', 'Ġlinyo', 'Ì£', 'n', 'ÌĦ', 'Ġme', 'Ġirek', 'Ġkan', 'ÌĦ?', 'Ġkeke', 'Ġore', 'Ġerieen', 'ÌĦ', 'Ġkan', 'ÌĦ?', 'Ġsa', 'ÌĢ', 'Ġi', 'ÌĢ', 're', 'Ġkeke', 'Ġore', 'Ġerieen', 'ÌĦ', 'Ġgwun', 'ÌĦ', 'Ġkan', 'ÌĦ?', 'Ġtumu', 'Ġnyi', 'Ġemi', 'Ġnu', ',', 'Ġme', 'ÌĢ', 'Ġire', 'Ġorio', 'Ì£', 'o', 'Ì£', 'n', 'ÌĦ!']\n",
+      "jerimaya onenitumu inyi ebi owot iman kè rekabu cha ibe: “okumugwem ogwukaan̄ inyọn̄ mè ijọn̄, awaji ebi ijeren, ìtumu ibe ikeyi: ‘mije enyi etetbe ikan nte nte kinyi, jonadabu, onyibe enyi ikaan̄ inye, mè igban̄ utọn̄ me lek otutuuk nteme kan̄, mè irọ inu geelek îtọbe,\n",
+      "['Ġjerimaya', 'Ġonenitumu', 'Ġinyi', 'Ġebi', 'Ġowot', 'Ġiman', 'Ġke', 'ÌĢ', 'Ġrekabu', 'Ġcha', 'Ġibe', ':', 'ĠâĢľ', 'okumugwem', 'Ġogwukaan', 'ÌĦ', 'Ġinyo', 'Ì£', 'n', 'ÌĦ', 'Ġme', 'ÌĢ', 'Ġijo', 'Ì£', 'n', 'ÌĦ,', 'Ġawaji', 'Ġebi', 'Ġijeren', ',', 'Ġi', 'ÌĢ', 'tumu', 'Ġibe', 'Ġikeyi', ':', 'ĠâĢĺ', 'mije', 'Ġenyi', 'Ġetetbe', 'Ġikan', 'Ġnte', 'Ġnte', 'Ġkinyi', ',', 'Ġjonadabu', ',', 'Ġonyibe', 'Ġenyi', 'Ġikaan', 'ÌĦ', 'Ġinye', ',', 'Ġme', 'ÌĢ', 'Ġigban', 'ÌĦ', 'Ġuto', 'Ì£', 'n', 'ÌĦ', 'Ġme', 'Ġlek', 'Ġotutuuk', 'Ġnteme', 'Ġkan', 'ÌĦ,', 'Ġme', 'ÌĢ', 'Ġiro', 'Ì£', 'Ġinu', 'Ġgeelek', 'Ġi', 'ÌĤ', 'to', 'Ì£', 'be', ',']\n",
+      "ìkakup me uyọt ibe emi ǹge ikpa ǹjet enyi ofolek ikwaan̄ ntap-ubọk eyi ekiria ijet ebi eyi awaji ìkup me judia.\n",
+      "['Ġi', 'ÌĢ', 'kakup', 'Ġme', 'Ġuyo', 'Ì£', 't', 'Ġibe', 'Ġemi', 'Ġn', 'ÌĢ', 'ge', 'Ġikpa', 'Ġn', 'ÌĢ', 'jet', 'Ġenyi', 'Ġofolek', 'Ġikwaan', 'ÌĦ', 'Ġntap', '-', 'ubo', 'Ì£', 'k', 'Ġeyi', 'Ġekiria', 'Ġijet', 'Ġebi', 'Ġeyi', 'Ġawaji', 'Ġi', 'ÌĢ', 'kup', 'Ġme', 'Ġjudia', '.']\n",
+      "ire ata etip eji ekilook ikitumu ibe ke awaji îjomo karais me mkpa, usini ebi kinyi ejeje ikitumu ibe ke ebi ìkwakwaan̄ kpebejomo me mkpa?\n",
+      "['Ġire', 'Ġata', 'Ġetip', 'Ġeji', 'Ġekilook', 'Ġikitumu', 'Ġibe', 'Ġke', 'Ġawaji', 'Ġi', 'ÌĤ', 'jomo', 'Ġkarais', 'Ġme', 'Ġmkpa', ',', 'Ġusini', 'Ġebi', 'Ġkinyi', 'Ġejeje', 'Ġikitumu', 'Ġibe', 'Ġke', 'Ġebi', 'Ġi', 'ÌĢ', 'kwakwaan', 'ÌĦ', 'Ġkpebejomo', 'Ġme', 'Ġmkpa', '?']\n",
+      "“ìtumu ìnyi ejikaya ogwu ubọọn̄ juda ìbe: kachieek ibe awaji kwun̄ ya ogwu owu otoon̄be ejit me lek ifiaan̄ owu ibe ke jeruselem ìkponin̄ me ubọk ogwu ubọọn̄ asiria!\n",
+      "['ĠâĢľ', 'i', 'ÌĢ', 'tumu', 'Ġi', 'ÌĢ', 'nyi', 'Ġejikaya', 'Ġogwu', 'Ġubo', 'Ì£', 'o', 'Ì£', 'n', 'ÌĦ', 'Ġjuda', 'Ġi', 'ÌĢ', 'be', ':', 'Ġkachieek', 'Ġibe', 'Ġawaji', 'Ġkwun', 'ÌĦ', 'Ġya', 'Ġogwu', 'Ġowu', 'Ġotoon', 'ÌĦ', 'be', 'Ġejit', 'Ġme', 'Ġlek', 'Ġifiaan', 'ÌĦ', 'Ġowu', 'Ġibe', 'Ġke', 'Ġjeruselem', 'Ġi', 'ÌĢ', 'kponin', 'ÌĦ', 'Ġme', 'Ġubo', 'Ì£', 'k', 'Ġogwu', 'Ġubo', 'Ì£', 'o', 'Ì£', 'n', 'ÌĦ', 'Ġasiria', '!']\n"
      ]
     }
    ],
@@ -238,17 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import AutoTokenizer\n",
-    "bpe_gpt2 = AutoTokenizer.from_pretrained('gpt2')"
+    "bpe_gpt2 = AutoTokenizer.from_pretrained('gpt2', padding_side='left')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +253,7 @@
        "50257"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,14 +264,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Ġrumours', 'Ġaudi', 'Ġunregulated', 'Ġ19', 'Ġhistorian', 'essa', 'Ġrace', 'ĠGorsuch', 'ĠHeaven', 'real']\n"
+      "['Ġshoes', 'Mexico', 'Ġinaction', 'asc', 'Ġshared', 'ĠTrack', 'Ġsubord', 'modern', 'Ġtubes', 'Ïī']\n"
      ]
     }
    ],
@@ -285,29 +281,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokenizer.save('data/obolo-bpe-tokenizer.json')\n",
-    "# tokenizer = Tokenizer.from_file('data/obolo-bpe-tokenizer.json')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Ġjaban', 'Ġonenikaan', 'ÌĦ', 'Ġngwan', 'ÌĦ', 'Ġenerieen', 'ÌĦ', 'Ġge', 'Ġekigwen', 'Ġjuban', '.', 'Ġjuban', 'Ġore', 'Ġadasi', 'Ġene', 'Ġo', 'ÌĢ', 'bebene', 'Ġikikwak', 'Ġuneen', 'ÌĦ,', 'Ġme', 'ÌĢ', 'Ġikiwut', 'Ġo', 'ÌĢ', 'ja', '.']\n",
-      " jaban onenikaan̄ ngwan̄ enerieen̄ ge ekigwen juban. juban ore adasi ene òbebene ikikwak uneen̄, mè ikiwut òja.\n"
+      "['Two', 'Ġfighters', 'Ġin', 'Ġthe', 'ĠUFC', 'Ġwere', 'Ġstriking', 'Ġeach', 'Ġother', ',', 'Ġthen', 'Ġone', 'Ġof', 'Ġthem', 'Ġended', 'Ġup', 'Ġtaking', 'Ġhis', 'Ġopponent', 'Ġdown', 'Ġand', 'Ġsubmitting', 'Ġhim', '.']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Two fighters in the UFC were striking each other, then one of them ended up taking his opponent down and submitting him.'"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokens = ids = bpe_gpt2.tokenize('Two fighters in the UFC were striking each other, then one of them ended up taking his opponent down and submitting him.')\n",
+    "print(tokens)\n",
+    "ids = bpe_gpt2.encode('Two fighters in the UFC were striking each other, then one of them ended up taking his opponent down and submitting him.')\n",
+    "bpe_gpt2.decode(ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tokenizer.save('data/obolo-bpe-tokenizer.json')\n",
+    "# tokenizer = Tokenizer.from_file('data/obolo-bpe-tokenizer.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ìkakifieek owot me lek ofiik mgbọ utọọk, mije, ìkilọlọk ofọnti utọọk iso otutuuk ebi uwu kan̄.\n",
+      "['Ġi', 'ÌĢ', 'kakifieek', 'Ġowot', 'Ġme', 'Ġlek', 'Ġofiik', 'Ġmgbo', 'Ì£', 'Ġuto', 'Ì£', 'o', 'Ì£', 'k', ',', 'Ġmije', ',', 'Ġi', 'ÌĢ', 'kilo', 'Ì£', 'lo', 'Ì£', 'k', 'Ġofo', 'Ì£', 'nti', 'Ġuto', 'Ì£', 'o', 'Ì£', 'k', 'Ġiso', 'Ġotutuuk', 'Ġebi', 'Ġuwu', 'Ġkan', 'ÌĦ.']\n",
+      " ìkakifieek owot me lek ofiik mgbọ utọọk, mije, ìkilọlọk ofọnti utọọk iso otutuuk ebi uwu kan̄.\n"
      ]
     }
    ],
    "source": [
+    "print(obolo_data[100])\n",
     "out = tokenizer.encode(obolo_data[100])\n",
     "print(out.tokens)\n",
     "print(tokenizer.decode(out.ids))"
